Fixed the text overflow issue in navbar.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,7 +15,11 @@
     border-radius: 10px;
     box-shadow: inset 7px 10px 12px #343a40;
 }
-
+.nav-link>span,
+.nav-link {
+    display: flex;
+    align-items: center;
+}
 /*!
  *   AdminLTE v3.1.0-rc
  *   Author: Colorlib
